--- a/kubernetes-dashboard-arm.yaml
+++ b/kubernetes-dashboard-arm.yaml
@@ -90,7 +90,7 @@ subjects:
 # ------------------- Dashboard Deployment ------------------- #
 
 kind: Deployment
-apiVersion: apps/v1beta2
+apiVersion: apps/v1
 metadata:
   labels:
     k8s-app: kubernetes-dashboard
@@ -160,4 +160,3 @@ spec:
       targetPort: 8443
   selector:
     k8s-app: kubernetes-dashboard
-
